fixed z-index bug

--- a/range-sliders/1.0.0/less/module-mixins.less
+++ b/range-sliders/1.0.0/less/module-mixins.less
@@ -127,4 +127,5 @@
 	border: 1px solid @color-B;
 	content: " ";
 	white-space: nowrap;
+	z-index: 2;
 }
