--- a/range-sliders/1.0.0/tests/BSA/assets/css/gui.css
+++ b/range-sliders/1.0.0/tests/BSA/assets/css/gui.css
@@ -1647,6 +1647,7 @@ a:hover {
   border: 1px solid #365fb4;
   content: " ";
   white-space: nowrap;
+  z-index: 2;
 }
 .range-slider:focus::-ms-thumb:after {
   position: absolute;
@@ -1660,6 +1661,7 @@ a:hover {
   border: 1px solid #365fb4;
   content: " ";
   white-space: nowrap;
+  z-index: 2;
 }
 .range-slider:focus::-moz-range-thumb:after {
   position: absolute;
@@ -1672,6 +1674,7 @@ a:hover {
   border: 1px solid #365fb4;
   content: " ";
   white-space: nowrap;
+  z-index: 2;
 }
 .range-slider:hover {
   outline: none;
