--- a/range-sliders/1.0.0/tests/WBC/assets/css/gui.css
+++ b/range-sliders/1.0.0/tests/WBC/assets/css/gui.css
@@ -1635,6 +1635,7 @@ a:hover {
   border: 1px solid #621a4b;
   content: " ";
   white-space: nowrap;
+  z-index: 2;
 }
 .range-slider:focus::-ms-thumb:after {
   position: absolute;
@@ -1648,6 +1649,7 @@ a:hover {
   border: 1px solid #621a4b;
   content: " ";
   white-space: nowrap;
+  z-index: 2;
 }
 .range-slider:focus::-moz-range-thumb:after {
   position: absolute;
@@ -1660,6 +1662,7 @@ a:hover {
   border: 1px solid #621a4b;
   content: " ";
   white-space: nowrap;
+  z-index: 2;
 }
 .range-slider:hover {
   outline: none;
